k8s/manifests/mtls-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: securekube-app
spec:
  mtls:
    mode: STRICT
