k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securekube-app
  labels:
    name: securekube-app
