k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securekube-api
  namespace: securekube-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securekube-api
  template:
    metadata:
      labels:
        app: securekube-api
    spec:
      containers:
        - name: securekube-api
          image: localhost:5000/securekube-api:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
