k8s/manifests/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-svc
  namespace: securekube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-svc
  template:
    metadata:
      labels:
        app: payment-svc
    spec:
      containers:
        - name: payment-svc
          image: localhost:5001/payment-svc:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  namespace: securekube-app
spec:
  selector:
    app: payment-svc
  ports:
    - port: 80
      targetPort: 8080
