k8s/manifests/remediation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remediation-engine
  namespace: securekube-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remediation-engine
  template:
    metadata:
      labels:
        app: remediation-engine
    spec:
      serviceAccountName: remediation-sa
      containers:
        - name: remediation-engine
          image: localhost:5000/securekube-remediation:v1
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: remediation-svc
  namespace: securekube-security
spec:
  selector:
    app: remediation-engine
  ports:
    - port: 80
      targetPort: 8081
